# WEB_HW2

./: Dockerfile  README.md  pyproject.toml  setup.py
bot4mates/: classes.py  funcs.py  main.py  notebook.py  ordered_folders.py  task11.py  task12.py  textmatch.py
