[tool.poetry]
name = "bot-assistant"
version = "1.0.0"
description = "The bot-assistant which can help to order the contacts, notes, files in folder"
authors = ["don-ar <artem.donets.python@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
colorama = "^0.4.6"
fuzzywuzzy = "^0.18.0"
python-dateutil = "^2.8.2"
python-levenshtein = "^0.20.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
